--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/500dc6e970.js" crossorigin="anonymous"></script>
     
+        <!-- Page icon -->
+        <link rel="icon" href="images/icon.png">
     </head>
 
     <body>
