Cards flip | Cards focus
Cards flip on hover
Other cards become gray

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                         <div class="typewriter">
-                            <h2 class="hero_title">Hey, it's me Swann</h2>
+                            <h2 class="hero_title">Hey, it's me Swann.</h2>
                             <p class="hero_desc">I am a student in game programming</p>
                     </div>            
                 </div>
@@ -99,129 +99,160 @@
 
                     <!-- Project 1 -->                    
                     <div class="col-lg-4 mt-4">
-                        <div class="card">
-                            <img class="card-img-top" src="images/desc_coloris.png" alt="Card image" style="width:100%">
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    Coloris
-                                </h4>
-                                <p class="card-text card_desc">
-                                    Play Liv, a little being in a dull underground world that finds a red orb full of some antic power, giving them abilities over their environment.
-                                </p>
-                                <div class="text-center">
-                                    <a href="https://github.com/Hezaerd/Coloris"  target="_blank" class="btn btn-dark">
-                                        See more
-                                    </a>
+                        <div class="card card-flip">
+                            <div class="card-front">  
+                                <img class="card-img-top" src="images/desc_coloris.png" alt="Card image" style="width:100%">
+                            </div>
+                            <div class="card-back">
+                                <div class="card-body">
+                                    <h4 class="card-title">
+                                        Coloris
+                                    </h4>
+                                    <p class="card-text">
+                                        Play Liv, a little being in a dull underground world that finds a red orb full of some antic power, giving them abilities over their environment.
+                                    </p>
+                                    <div class="text-center">
+                                        <br>
+                                        <a href="https://github.com/Hezaerd/Coloris" target="_blank" class="btn btn-dark">
+                                            See more
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
 
                     <!-- Project 2 -->
-                    <!-- <div class="col-lg-4 mt-4">
-                        <div class="card portfolioContent">
-                            <img class="card-img-top" src="images/placeholder.png" alt="Card image" style="width:100%">
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    Lorem Impsum
-                                </h4>
-                                <p class="card-text">
-                                    Lorem Impsum.
-                                </p>
-                                <div class="text-center">
-                                    <a href="#" class="btn btn-dark">Link
-                                        <i class="fa-brands fa-github"></i>
-                                    </a>
+                    <div class="col-lg-4 mt-4">
+                        <div class="card card-flip">
+                            <div class="card-front">  
+                                <img class="card-img-top" src="images/placeholder.png" alt="Card image" style="width:100%">
+                            </div>
+                            <div class="card-back">
+                                <div class="card-body">
+                                    <h4 class="card-title">
+                                        Lorem Ipsum
+                                    </h4>
+                                    <p class="card-text">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.
+                                    </p>
+                                    <div class="text-center">
+                                        <br>
+                                        <a href="projects" target="_blank" class="btn btn-dark">
+                                            See more
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
 
                     <!-- Project 3 -->
-                    <!-- <div class="col-lg-4 mt-4">
-                        <div class="card portfolioContent">
-                            <img class="card-img-top" src="images/placeholder.png" alt="Card image" style="width:100%">
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    Lorem Impsum
-                                </h4>
-                                <p class="card-text">
-                                    Lorem Impsum.
-                                </p>
-                                <div class="text-center">
-                                    <a href="#" class="btn btn-dark">Link
-                                        <i class="fa-brands fa-github"></i>
-                                    </a>
+                    <div class="col-lg-4 mt-4">
+                        <div class="card card-flip">
+                            <div class="card-front">  
+                                <img class="card-img-top" src="images/placeholder.png" alt="Card image" style="width:100%">
+                            </div>
+                            <div class="card-back">
+                                <div class="card-body">
+                                    <h4 class="card-title">
+                                        Lorem Ipsum
+                                    </h4>
+                                    <p class="card-text">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.
+                                    </p>
+                                    <div class="text-center">
+                                        <br>
+                                        <a href="projects" target="_blank" class="btn btn-dark">
+                                            See more
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
 
                 <br> <!-- Jump row -->
                 <div class="row">
                     
                     <!-- Project 4 -->
-                    <!-- <div class="col-lg-4 mt-4">
-                        <div class="card portfolioContent">
-                            <img class="card-img-top" src="images/placeholder.png" alt="Card image" style="width:100%">
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    Lorem Impsum
-                                </h4>
-                                <p class="card-text">
-                                    Lorem Impsum.
-                                </p>
-                                <div>
-                                    <a href="#" class="btn btn-dark">Link
-                                        <i class="fa-brands fa-github"></i>
-                                    </a>
+                    <div class="col-lg-4 mt-4">
+                        <div class="card card-flip">
+                            <div class="card-front">  
+                                <img class="card-img-top" src="images/placeholder.png" alt="Card image" style="width:100%">
+                            </div>
+                            <div class="card-back">
+                                <div class="card-body">
+                                    <h4 class="card-title">
+                                        Lorem Ipsum
+                                    </h4>
+                                    <p class="card-text">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.
+                                    </p>
+                                    <div class="text-center">
+                                        <br>
+                                        <a href="projects" target="_blank" class="btn btn-dark">
+                                            See more
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
 
                     <!-- Project 5 -->
-                    <!-- <div class="col-lg-4 mt-4">
-                        <div class="card portfolioContent">
-                            <img class="card-img-top" src="images/placeholder.png" alt="Card image" style="width:100%">
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    Lorem Impsum
-                                </h4>
-                                <p class="card-text">
-                                    Lorem Impsum.
-                                </p>
-                                <div class="text-center">
-                                    <a href="#" class="btn btn-dark">Link
-                                        <i class="fa-brands fa-github"></i>
-                                    </a>
+                    <div class="col-lg-4 mt-4">
+                        <div class="card card-flip">
+                            <div class="card-front">  
+                                <img class="card-img-top" src="images/placeholder.png" alt="Card image" style="width:100%">
+                            </div>
+                            <div class="card-back">
+                                <div class="card-body">
+                                    <h4 class="card-title">
+                                        Lorem Ipsum
+                                    </h4>
+                                    <p class="card-text">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.
+                                    </p>
+                                    <div class="text-center">
+                                        <br>
+                                        <a href="projects" target="_blank" class="btn btn-dark">
+                                            See more
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
 
                     <!-- Project 6 -->
                     <div class="col-lg-4 mt-4">
-                        <div class="card portfolioContent">
-                            <img class="card-img-top" src="images/desc_libmaths.png" alt="Github Profile image" style="width:100%">
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    Mathematics Library
-                                </h4>
-                                <p class="card-text">
-                                    A collection of mathematicals tools (oriented for OpenGL rendering).
-                                </p>
-                                <div class="text-center">
-                                    <a href="https://github.com/Hezaerd/Lib-Maths" target="_blank" class="btn btn-dark btn_link">Link
-                                        <i class="fa-brands fa-github"></i>
-                                    </a>
+                        <div class="card card-flip">
+                            <div class="card-front">  
+                                <img class="card-img-top" src="images/desc_libmaths.png" alt="Card image" style="width:100%">
+                            </div>
+                            <div class="card-back">
+                                <div class="card-body">
+                                    <h4 class="card-title">
+                                        Mathematics Library
+                                    </h4>
+                                    <p class="card-text">
+                                        A collection of mathematicals tools (oriented for OpenGL rendering).
+                                    </p>
+                                    <div class="text-center">
+                                        <br>
+                                        <a href="https://github.com/Hezaerd/Lib-Maths" target="_blank" class="btn btn-dark">
+                                            See more
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
 
                 </div>
+            </div>
         </section>
 
         <!-- footer section-->
