--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Swann Portfolio</title>
 
         <!-- Linking CSS -->
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="css/style.css">
         
         <!-- Bootsrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
