Adding Portal GL and Eden's Builder

--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
                             <!-- About me text -->
                             <div class="about_desc mb-5">
                                 <p>
-                                    I'm 18 and I am a student in game motor programming. I am currently in my second year of studies. 
-                                    I am passionate about video games and I want to make them.
+                                    J'ai 18 ans et j'étudie la programmation de moteurs de jeux. Je suis actuellement en deuxième année d'études à Isart Digital Mtl.
                                 </p>
                             </div>
                         </div>
@@ -130,13 +129,12 @@
                             <div class="card-back">
                                 <div class="card-body">
                                     <h4 class="card-title">
-                                        Lorem Ipsum
+                                        Eden's Builder
                                     </h4>
                                     <p class="card-text">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.
+                                        You are God, your mission is to recreate an ecosystem on a new planet. Understand how the elements you drop interact with each other and complete your quests.
                                     </p>
                                     <div class="text-center">
-                                        <br>
                                         <a href="projects" target="_blank" class="btn btn-dark">
                                             See more
                                         </a>
@@ -150,19 +148,19 @@
                     <div class="col-lg-4 mt-4">
                         <div class="card card-flip">
                             <div class="card-front">  
-                                <img class="card-img-top" src="images/placeholder.png" alt="Card image" style="width:100%">
+                                <img class="card-img-top" src="images/desc_portalGL.png" alt="Card image" style="width:100%">
                             </div>
                             <div class="card-back">
                                 <div class="card-body">
                                     <h4 class="card-title">
-                                        Lorem Ipsum
+                                        PortalGL
                                     </h4>
                                     <p class="card-text">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.
+                                        Play as a medieval mage. Armed with your wand, move by shooting portals through the level to eliminate the corrupted wizard.
                                     </p>
                                     <div class="text-center">
                                         <br>
-                                        <a href="projects" target="_blank" class="btn btn-dark">
+                                        <a href="https://github.com/Hezaerd/PortalGL" target="_blank" class="btn btn-dark">
                                             See more
                                         </a>
                                     </div>
@@ -178,19 +176,20 @@
                     <div class="col-lg-4 mt-4">
                         <div class="card card-flip">
                             <div class="card-front">  
-                                <img class="card-img-top" src="images/placeholder.png" alt="Card image" style="width:100%">
+                                <img class="card-img-top" src="images/desc_libmaths.png" alt="Card image" style="width:100%">
                             </div>
                             <div class="card-back">
                                 <div class="card-body">
                                     <h4 class="card-title">
-                                        Lorem Ipsum
+                                        Mathematics Library
                                     </h4>
                                     <p class="card-text">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.
+                                        A collection of mathematicals tools ready to be used for OpenGL.
                                     </p>
                                     <div class="text-center">
                                         <br>
-                                        <a href="projects" target="_blank" class="btn btn-dark">
+                                        <br>
+                                        <a href="https://github.com/Hezaerd/Lib-Maths" target="_blank" class="btn btn-dark">
                                             See more
                                         </a>
                                     </div>
@@ -200,7 +199,7 @@
                     </div>
 
                     <!-- Project 5 -->
-                    <div class="col-lg-4 mt-4">
+                    <!-- <div class="col-lg-4 mt-4">
                         <div class="card card-flip">
                             <div class="card-front">  
                                 <img class="card-img-top" src="images/placeholder.png" alt="Card image" style="width:100%">
@@ -222,31 +221,31 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Project 6 -->
-                    <div class="col-lg-4 mt-4">
+                    <!-- <div class="col-lg-4 mt-4">
                         <div class="card card-flip">
                             <div class="card-front">  
-                                <img class="card-img-top" src="images/desc_libmaths.png" alt="Card image" style="width:100%">
+                                <img class="card-img-top" src="images/placeholder.png" alt="Card image" style="width:100%">
                             </div>
                             <div class="card-back">
                                 <div class="card-body">
                                     <h4 class="card-title">
-                                        Mathematics Library
+                                        Lorem Ipsum
                                     </h4>
                                     <p class="card-text">
-                                        A collection of mathematicals tools (oriented for OpenGL rendering).
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.
                                     </p>
                                     <div class="text-center">
                                         <br>
-                                        <a href="https://github.com/Hezaerd/Lib-Maths" target="_blank" class="btn btn-dark">
+                                        <a href="projects" target="_blank" class="btn btn-dark">
                                             See more
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                 </div>
