--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <!-- About me text -->
                             <div class="about_desc mb-5">
                                 <p>
-                                    J'ai 18 ans et j'étudie la programmation de moteurs de jeux. Je suis actuellement en deuxième année d'études à Isart Digital Mtl.
+                                    I'm 18 years old and I'm studying game engine programming. I am currently in my second year of study at Isart Digital Mtl.
                                 </p>
                             </div>
                         </div>
